# Obsidian-Menu-Semanal

./: .gitignore  README.md  pyproject.toml
src/tbca_crawler/: __init__.py  __main__.py  client.py  constants.py  crawler.py  exporters.py  models.py  parser.py
